// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select / MultiSelectList Item Default 1`] = `
.c19 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: transparent;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  width: 16px;
  display: inline-block;
}

.c12 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12::before {
  content: '';
  display: block;
  padding: 2px;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c6 {
  position: relative;
}

.c6:hover .c11 {
  border-color: #4B4B46;
}

.c10 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c10:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c10:checked + .c11 svg {
  fill: #FFFFFF;
}

.c10[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c10:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c20:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c20:checked + .c11 svg {
  fill: #FFFFFF;
}

.c20[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c20:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c20 + .c11::before {
  border: 1px solid #FF1900;
}

.c20:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c15 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  height: 100%;
}

.c0 {
  padding-right: 8px;
  padding-left: 8px;
  height: 28px;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c0:hover .c11 {
  outline: 1px solid #0046FF;
}

.c5 .c11 {
  width: 16px;
  height: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        width="16px"
      >
        <label
          className="c5 c6 c7"
          hidden={false}
        >
          <span
            className="c8"
          >
            <div
              className="c9"
            >
              <input
                className="c10"
                name="example"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="c11 c12 c13"
              >
                <svg
                  aria-hidden="true"
                  className="c14"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="c15 c16"
              >
                
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
    <div
      className="c17"
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c16"
          >
            First
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select / MultiSelectList Item Disabled 1`] = `
.c19 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: transparent;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  width: 16px;
  display: inline-block;
}

.c12 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12::before {
  content: '';
  display: block;
  padding: 2px;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c6 {
  position: relative;
}

.c6:hover .c11 {
  border-color: #4B4B46;
}

.c10 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c10:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c10:checked + .c11 svg {
  fill: #FFFFFF;
}

.c10[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c10:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c21:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c21:checked + .c11 svg {
  fill: #FFFFFF;
}

.c21[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c21:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c21 + .c11::before {
  border: 1px solid #FF1900;
}

.c21:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c15 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  height: 100%;
}

.c22:hover .c11 {
  outline: 1px solid #0046FF;
}

.c0 {
  padding-right: 8px;
  padding-left: 8px;
  height: 28px;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c5 .c11 {
  width: 16px;
  height: 16px;
}

<div
  className="c0"
  disabled={true}
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        width="16px"
      >
        <label
          className="c5 c6 c7"
          hidden={false}
        >
          <span
            className="c8"
          >
            <div
              className="c9"
            >
              <input
                className="c10"
                name="example"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="c11 c12 c13"
              >
                <svg
                  aria-hidden="true"
                  className="c14"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="c15 c16"
              >
                
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
    <div
      className="c17"
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c20"
          >
            First
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select / MultiSelectList Item Selected 1`] = `
.c19 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: transparent;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  width: 16px;
  display: inline-block;
}

.c12 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12::before {
  content: '';
  display: block;
  padding: 2px;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c6 {
  position: relative;
}

.c6:hover .c11 {
  border-color: #4B4B46;
}

.c10 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c10:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c10:checked + .c11 svg {
  fill: #FFFFFF;
}

.c10[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c10:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c10:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c20:checked + .c11 {
  border-color: #0046FF;
  background: #0046FF;
}

.c20:checked + .c11 svg {
  fill: #FFFFFF;
}

.c20[disabled] + .c11 {
  border-color: #EBEBE8;
}

.c20:checked[disabled] + .c11 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c20 + .c11::before {
  border: 1px solid #FF1900;
}

.c20:focus + .c11::before {
  border: 1px solid #0046FF;
}

.c15 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  height: 100%;
}

.c0 {
  padding-right: 8px;
  padding-left: 8px;
  height: 28px;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c0:hover {
  background: #F5F5F5;
}

.c0:hover .c11 {
  outline: 1px solid #0046FF;
}

.c5 .c11 {
  width: 16px;
  height: 16px;
}

<div
  className="c0"
  selected={true}
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
        width="16px"
      >
        <label
          className="c5 c6 c7"
          hidden={false}
        >
          <span
            className="c8"
          >
            <div
              className="c9"
            >
              <input
                checked={true}
                className="c10"
                name="example"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="c11 c12 c13"
              >
                <svg
                  aria-hidden="true"
                  className="c14"
                  focusable="false"
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  size={3}
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                  />
                </svg>
              </div>
              <span
                className="c15 c16"
              >
                
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
    <div
      className="c17"
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c16"
          >
            First
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select / MultiSelectList List With Different Arrow Positions 1`] = `
.c26 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c14 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: transparent;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c28 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  width: 16px;
  display: inline-block;
}

.c19 {
  width: 20px;
  height: 20px;
  border: 1px solid #BCBCB6;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c19::before {
  content: '';
  display: block;
  padding: 2px;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c13 {
  position: relative;
}

.c13:hover .c18 {
  border-color: #4B4B46;
}

.c17 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c17:checked + .c18 {
  border-color: #0046FF;
  background: #0046FF;
}

.c17:checked + .c18 svg {
  fill: #FFFFFF;
}

.c17[disabled] + .c18 {
  border-color: #EBEBE8;
}

.c17:checked[disabled] + .c18 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c17:focus + .c18::before {
  border: 1px solid #0046FF;
}

.c31:checked + .c18 {
  border-color: #0046FF;
  background: #0046FF;
}

.c31:checked + .c18 svg {
  fill: #FFFFFF;
}

.c31[disabled] + .c18 {
  border-color: #EBEBE8;
}

.c31:checked[disabled] + .c18 {
  border-color: #EBEBE8;
  background: #EBEBE8;
}

.c31 + .c18::before {
  border: 1px solid #FF1900;
}

.c31:focus + .c18::before {
  border: 1px solid #0046FF;
}

.c22 {
  padding-left: 8px;
  white-space: initial;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.03);
}

.c4:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c4:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.03);
}

.c29:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c29:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  position: relative;
  top: 10px;
  border: 1px solid #bcbcb6;
  background-color: #ffffff;
  padding-top: 8px;
  padding-bottom: 8px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.03);
}

.c30:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -6px;
  border-bottom: 6px solid;
  border-bottom-color: #bcbcb6;
}

.c30:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: -5px;
  border-bottom: 6px solid;
  border-bottom-color: #ffffff;
}

.c6 {
  overflow-y: auto;
  width: 100%;
  height: 100%;
  padding: 1px;
  margin: -1px;
}

.c3:after {
  content: '';
  position: absolute;
  pointer-events: none;
  bottom: calc(100% - 240px - 30px);
  left: 6px;
  height: 20px;
  background: linear-gradient(to bottom,rgba(255,255,255,0),#fff);
  width: calc(100% - 12px);
}

.c8 {
  height: 100%;
}

.c7 {
  padding-right: 8px;
  padding-left: 8px;
  height: 28px;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
}

.c7:hover {
  background: #F5F5F5;
}

.c7:hover .c18 {
  outline: 1px solid #0046FF;
}

.c27 {
  padding-right: 8px;
  padding-left: 8px;
  height: 28px;
  white-space: nowrap;
  background: #FFFFFF;
  cursor: pointer;
  color: #A0A09B;
  pointer-events: none;
}

.c12 .c18 {
  width: 16px;
  height: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Default (right)
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          aria-multiselectable="true"
          className="c4 c5"
          role="listbox"
          tabIndex={0}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Default?
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
              selected={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            checked={true}
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        First
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Second
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c27"
              disabled={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c28"
                      >
                        Disabled
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Left
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          aria-multiselectable="true"
          className="c29 c5"
          role="listbox"
          tabIndex={0}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Default?
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
              selected={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            checked={true}
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        First
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Second
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c27"
              disabled={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c28"
                      >
                        Disabled
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Center
    </div>
    <div>
      <div
        className="c3"
      >
        <ul
          aria-multiselectable="true"
          className="c30 c5"
          role="listbox"
          tabIndex={0}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Default?
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
              selected={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            checked={true}
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        First
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c23"
                      >
                        Second
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c27"
              disabled={true}
            >
              <div
                className="c8 c9"
              >
                <div
                  className="c10"
                >
                  <div
                    className="c11"
                    width="16px"
                  >
                    <label
                      className="c12 c13 c14"
                      hidden={false}
                    >
                      <span
                        className="c15"
                      >
                        <div
                          className="c16"
                        >
                          <input
                            className="c17"
                            name="example"
                            readOnly={true}
                            type="checkbox"
                          />
                          <div
                            className="c18 c19 c20"
                          >
                            <svg
                              aria-hidden="true"
                              className="c21"
                              focusable="false"
                              preserveAspectRatio="xMidYMid meet"
                              role="presentation"
                              size={3}
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                              />
                            </svg>
                          </div>
                          <span
                            className="c22 c23"
                          >
                            
                          </span>
                        </div>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="c25"
                  >
                    <div
                      className="c26"
                    >
                      <span
                        className="c28"
                      >
                        Disabled
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
